--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,8 +1,6 @@
 <footer class="app-footer">
   <div class="container pt-3 pb-3">
-    <a href="#">
-        ITCG's Purchase System
-    </a>© 2018 2Tall2Short
+    <a href="#"></a>© 2018 2Tall2Short
 
     <div class="s-content-footer-right">
         Powered by <a href="https://angular.io/">Angular 4+</a> and 
