Fixed #17 - Added pointer CSS class to display the proper cursor.

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -42,6 +42,10 @@
   width: 3px;
 }
 
+.pointer {
+  cursor: pointer !important;
+}
+
 /* ngx-datatable END----- */
 
 @import '~@swimlane/ngx-datatable/release/index.css';
