--- a/src/app/views/processes/requisition/components/requisition-create/requisition-create.component.html
+++ b/src/app/views/processes/requisition/components/requisition-create/requisition-create.component.html
@@ -23,14 +23,20 @@
                   <div class="col-sm-12">
                     <div class="form-group">
                       <label for="">Nombre del jefe del area solicitante</label>
-                      <input type="text" readonly class="form-control read-only-normal-style" value="">
+                      <input *ngIf="!boss" type="text" readonly class="form-control read-only-normal-style" value="">
+                      <div *ngIf="boss" class="fakeInput">
+                        {{ boss.name }}
+                      </div>  
                     </div>
                   </div>
 
                   <div class="col-sm-12">
                     <div class="form-group">
                       <label for="">Área solicitante</label>
-                      <input type="text" readonly class="form-control read-only-normal-style" value="">
+                      <input *ngIf="!boss" type="text" readonly class="form-control read-only-normal-style" value="">
+                      <div *ngIf="boss" class="fakeInput">
+                        {{ boss.department.name }}
+                      </div>  
                     </div>
                   </div>
 
