event emitter for update user

--- a/src/app/views/users/roles/roles.component.html
+++ b/src/app/views/users/roles/roles.component.html
@@ -1,15 +1,15 @@
 <div class="animated fadeIn">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <h2> Usuarios </h2>
             <h5>Jefes de Departamento</h5>
-            <app-user-table [rows]="bossDepartments"></app-user-table>
+            <app-user-table (userUpdate)="handleBossUpdated($event)" [rows]="bossDepartments"></app-user-table>
             <hr>
 
             <h5>Subdirectores</h5>
-            <app-user-table [rows]="vicePrincipals"></app-user-table>
+            <app-user-table (userUpdate)="handleSubUpdated($event)" [rows]="vicePrincipals"></app-user-table>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-12">
             <h2>Formulario</h2>
         </div>
     </div>
