--- a/src/app/views/processes/requisition/components/requisition-create/requisition-create.component.html
+++ b/src/app/views/processes/requisition/components/requisition-create/requisition-create.component.html
@@ -228,39 +228,45 @@
 
               <ngx-datatable-column [minWidth]="50" [maxWidth]="130" name="Partida" prop="concept">
                 <ng-template let-value="value" ngx-datatable-cell-template>
-                  <strong>{{value}}</strong>
+                  <div class="break-word"><strong> {{value}} </strong></div> 
                 </ng-template>
               </ngx-datatable-column>
 
               <ngx-datatable-column [minWidth]="50" [maxWidth]="100" name="Cantidad" prop="quantity">
                 <ng-template let-value="value" ngx-datatable-cell-template>
-                  <strong>{{value}}</strong>
+                  <div class="break-word"><strong> {{value}} </strong></div> 
                 </ng-template>
               </ngx-datatable-column>
 
               <ngx-datatable-column [minWidth]="50" [maxWidth]="100" name="Unidad" prop="unit">
                 <ng-template let-value="value" ngx-datatable-cell-template>
-                  <strong>{{value}}</strong>
+                  <div class="break-word"><strong> {{value}} </strong></div> 
                 </ng-template>
               </ngx-datatable-column>
 
               <ngx-datatable-column [minWidth]="300" [maxWidth]="450" name="Descripción de bienes/servicios" prop="description">
                 <ng-template let-value="value" ngx-datatable-cell-template>
-                  <strong>{{value}}</strong>
+                  <div class="break-word"><strong> {{value}} </strong></div> 
                 </ng-template>
               </ngx-datatable-column>
 
               <ngx-datatable-column [minWidth]="50" [maxWidth]="200" name="Costo" prop="cost">
                 <ng-template let-value="value" ngx-datatable-cell-template>
-                  <strong>{{value}}</strong>
+                  <div class="break-word"><strong> {{value}} </strong></div> 
                 </ng-template>
               </ngx-datatable-column>
 
               <ngx-datatable-column [minWidth]="50" [maxWidth]="200" name="TOTAL" prop="total">
                 <ng-template let-value="value" ngx-datatable-cell-template>
-                  <strong>{{value}}</strong>
+                  <div class="break-word"><strong> {{value}} </strong></div> 
                 </ng-template>
               </ngx-datatable-column>
+
+              <ngx-datatable-column [minWidth]="50" name="" prop="description" width="50">
+                  <ng-template let-value="value" ngx-datatable-cell-template>
+                    <i (click)="close(value)" class="fa fa-close"></i>
+                  </ng-template>
+                </ngx-datatable-column>
 
             </ngx-datatable>
           </div> 
