--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -16,7 +16,14 @@
       </a>
 
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
-        <div class="dropdown-header text-center"><strong>Cuenta</strong></div>
+        <div class="dropdown-header text-center">
+          <div *ngIf="userLogged ; else planningTemplate">
+            <h6 *ngIf="userLogged.type == 'viceprincipal'; else falsyTemplate"><strong>Subdirector</strong></h6><hr style="margin-top: 0; margin-bottom: 0">
+            <ng-template #falsyTemplate><h6><strong>Jefe de Departamento</strong></h6></ng-template>
+            <h5><strong>{{ userLogged.username }}</strong></h5>
+          </div>          
+          <ng-template #planningTemplate><h6><strong>Planeación</strong></h6></ng-template>
+        </div>
         <!-- <a class="dropdown-item" href="#"><i class="fa fa-bell-o"></i> Updates<span class="badge badge-info">42</span></a>
         <a class="dropdown-item" href="#"><i class="fa fa-envelope-o"></i> Messages<span class="badge badge-success">42</span></a>
         <a class="dropdown-item" href="#"><i class="fa fa-tasks"></i> Tasks<span class="badge badge-danger">42</span></a>
@@ -28,7 +35,8 @@
         <a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a> -->
         <div class="divider"></div>
         <!-- <a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a> -->
-        <a class="dropdown-item pointer" (click)="logout()"><i class="fa icon-logout"></i>Cerrar sesión</a>
+        
+        <a class="dropdown-item pointer" (click)="logout()"><i class="fa icon-logout"></i> Cerrar sesión</a>
       </div>
     </li>
   </ul>
