--- a/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
+++ b/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
@@ -1,3 +1,35 @@
-<p>
-  purchase-order-create works!
-</p>
+<div class="animated fadeIn">
+  <div class="row">
+
+    
+    <div class="col-sm-12">
+      <div class="card">
+        
+        <ngx-datatable
+          class="material"
+          [rows]="data"
+          [columnMode]="'force'"
+          [columns]="columns"
+          [headerHeight]="50"
+          [footerHeight]="50"
+          [rowHeight]="'auto'"
+          [limit]="5"
+          [selected]="selected"
+          [selectionType]="'single'"
+          (select)='onSelect($event)'>
+        </ngx-datatable>
+
+      </div>
+
+      <div class='selected-column'>
+        <h4>Selections</h4>
+        <ul>
+          <li *ngFor='let sel of selected'>
+            {{sel.name}}
+          </li>
+          <li *ngIf="!selected.length">No Selections</li>
+        </ul>
+      </div>
+    </div>
+    </div><!--/.col-->
+  </div><!-- row -->
