--- a/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.scss
+++ b/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.scss
@@ -1,4 +1,12 @@
 @import "../../../../../../scss/_bootstrap-variables";
 :host /deep/ .datatable-body-row.active .datatable-row-group {
   background-color: $cyan !important;
+  cursor: default;
+}
+
+// datatable-body-row:hover {
+// }
+
+:host /deep/ .datatable-body-row .datatable-row-group {
+  cursor: pointer;
 }
