Role view improved

--- a/src/app/views/users/roles/roles.component.html
+++ b/src/app/views/users/roles/roles.component.html
@@ -1,5 +1,5 @@
 <div class="animated fadeIn">
-    <div class="row">
+    <div class="row mb-3">
         <div class="col-md-12">
             <h2> Usuarios </h2>
             <h5>Jefes de Departamento</h5>
@@ -8,9 +8,6 @@
 
             <h5>Subdirectores</h5>
             <app-user-table (userUpdate)="handleSubUpdated($event)" [rows]="vicePrincipals"></app-user-table>
-        </div>
-        <div class="col-md-12">
-            <h2>Formulario</h2>
         </div>
     </div>
 </div>
