--- a/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
+++ b/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
@@ -1,35 +1,14 @@
 <div *ngIf="providers && requisitions" class="animated fadeIn">
   <div class="row">
 
+    <app-selectable-table class="col-md-12"
+      [rows]="providers"
+      [columns]="columns"
+      [selected]="selectedProvider"
+      [selectionType]="'single'"
+      [messages]="providerTableMessages"
+      (selectedElement)="selectedElementHandler($event)"
+    ></app-selectable-table>
     
-    <div class="col-sm-12">
-      <div class="card">
-        
-        <ngx-datatable
-          class="material"
-          [rows]="providers"
-          [columnMode]="'force'"
-          [columns]="columns"
-          [headerHeight]="50"
-          [footerHeight]="50"
-          [rowHeight]="'auto'"
-          [limit]="5"
-          [selected]="selectedProvider"
-          [selectionType]="'single'"
-          >
-        </ngx-datatable>
-
-      </div>
-      
-      <div *ngIf="selectedProvider" class='selected-column'>
-        <h4>Selections</h4>
-        <ul>
-          <li *ngFor='let sel of selectedProvider'>
-            {{sel.name}}
-          </li>
-          <li *ngIf="!selectedProvider.length">No Selections</li>
-       </ul>
-     </div>
-    </div>
     </div>
 </div>
