#19 - Added 'enableFiltering' Input to the selectable-table component.

--- a/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
+++ b/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
@@ -7,6 +7,7 @@
       [selected]="selectedProvider"
       [selectionType]="'single'"
       [messages]="providerTableMessages"
+      [enableFiltering]="true"
       (selectedElement)="selectedElementHandler($event)"
     ></app-selectable-table>
     
