--- a/src/app/views/processes/purchase-order/components/selectable-table/selectable-table.component.html
+++ b/src/app/views/processes/purchase-order/components/selectable-table/selectable-table.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-12" *ngIf="rows">
 
-    <div class="col-sm-12 col-md-12">
+    <div class="col-sm-12 col-md-12" *ngIf="enableFiltering">
       <div class="card border-primary">
         <div class="card-header">
           Opciones
