#19 - Moved 'selectable-table' component to shared component folder.

--- a/src/app/shared/components/selectable-table/selectable-table.component.scss
+++ b/src/app/shared/components/selectable-table/selectable-table.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../scss/_bootstrap-variables";
+@import "../../../../scss/_bootstrap-variables.scss";
 :host /deep/ .datatable-body-row.active .datatable-row-group {
   background-color: $cyan !important;
   cursor: default;
