First approach of approvements view

--- a/src/app/views/aprovements/vice-aprovements/components/collapse-departmen/collapse-department.component.html
+++ b/src/app/views/aprovements/vice-aprovements/components/collapse-departmen/collapse-department.component.html
@@ -1,21 +1,23 @@
 <div class="animated fadeIn">
     <div class="card">
         <div class="card-header">
-            Bootstrap Collapse
+            <strong>Departamento: </strong> {{department.name}}
+            -
+            <strong>Jefe: </strong> {{ department.boss_department.name }}
         <div class="card-actions">
             <a (click)="isCollapsed = !isCollapsed" style="cursor: pointer;">
             <small className="text-muted">Ver</small>
             </a>
         </div>
         </div>
-        <div class="card-body"
+        <div class="card-body animated fadeIn"
             (collapsed)="collapsed($event)"
             (expanded)="expanded($event)"
             [collapse]="isCollapsed">
-        <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo
-            consequat.
-        </p>
+
+            <app-table-requisition [requisitions]="department.boss_department.requisition"></app-table-requisition>
+            
+        
         </div>
         <!-- <div class="card-footer">
         </div> -->
