SelectableTableComponent is now exported from SelectableTableModule

--- a/src/app/shared/selectable-table/selectable-table.component.scss
+++ b/src/app/shared/selectable-table/selectable-table.component.scss
@@ -1,4 +1,5 @@
-@import "../../../../scss/_bootstrap-variables.scss";
+@import "../../../scss/_bootstrap-variables.scss";
+
 :host /deep/ .datatable-body-row.active .datatable-row-group {
   background-color: $cyan !important;
   cursor: default;
