#19 - Now the requisitions are filtered based on the selected provider.

--- a/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
+++ b/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
@@ -12,7 +12,7 @@
       
           <app-selectable-table class="col-md-12"
             [rows]="providers"
-            [columns]="columns"
+            [columns]="columnsProvider"
             [selected]="selectedProvider"
             [selectionType]="'single'"
             [messages]="providerTableMessages"
