--- a/src/app/shared/selectable-table/selectable-table.component.html
+++ b/src/app/shared/selectable-table/selectable-table.component.html
@@ -2,7 +2,7 @@
 
   <div class="row">
     
-    <div class="col-sm-6 col-md-6">
+    <div [class]="columnCss">
       <div class="card border-primary">
         <div class="card-header text-center">
           {{messages.primaryTable}}
@@ -14,7 +14,7 @@
     </div>
 
 
-    <div class="col-sm-6 col-md-6">
+    <div [class]="columnCss">
   
       <div class="col-sm-12 col-md-12" *ngIf="enableFiltering">
         <div class="card border-primary">
@@ -43,27 +43,29 @@
           </div>
         </div>
       </div>
-
-      <div *ngIf="selected.length > 0" class="col-sm-12 col-md-12">
-        <div class="card border-primary">
-          <div class="card-header text-center">
-            {{messages.secondaryTable}}
+      <div *ngIf="showSecondaryTable">
+        
+        <div *ngIf="selected.length > 0 " class="col-sm-12 col-md-12">
+          <div class="card border-primary">
+            <div class="card-header text-center">
+              {{messages.secondaryTable}}
+            </div>
+            <div >
+              <ngx-datatable class="material" [rows]="selected" [columnMode]="'force'" [columns]="columns" [headerHeight]="50" [footerHeight]="50"
+                [rowHeight]="'auto'" [limit]="5">
+              </ngx-datatable>
+            </div>
+            
           </div>
-          <div >
-            <ngx-datatable class="material" [rows]="selected" [columnMode]="'force'" [columns]="columns" [headerHeight]="50" [footerHeight]="50"
-              [rowHeight]="'auto'" [limit]="5">
-            </ngx-datatable>
-          </div>
-          
         </div>
-      </div>
 
-      <div *ngIf="!selected.length" class="col-sm-12 col-md-12">
-      <div class="card card-accent-danger">
-        <div class="card-body">
-          <div>{{messages.noSelection}}</div>
+        <div *ngIf="!selected.length" class="col-sm-12 col-md-12">
+          <div class="card card-accent-danger">
+            <div class="card-body">
+              <div>{{messages.noSelection}}</div>
+            </div>
+          </div>
         </div>
-      </div>
       </div>
 
     </div>
