--- a/src/app/views/aprovements/vice-aprovements/components/table-requisition/table-requisition.component.html
+++ b/src/app/views/aprovements/vice-aprovements/components/table-requisition/table-requisition.component.html
@@ -1,3 +1,18 @@
-<p>
-    {{ requisitions | json }}
-</p>
+<div class="row">
+    <div class="col-md-12">
+        <app-selectable-table
+            [rows]="requisitions"
+            [columns]="columns"
+            [selected]="selectedRequisition"
+            [selectionType]="'single'"
+            [messages]="providerTableMessages"
+            [enableFiltering]="false"
+            [showSecondaryTable]="false"
+            [columnsSize]="columnsSize"
+            (selectedElement)="selectedElementHandler($event)"
+        >
+    
+        </app-selectable-table>
+
+    </div>
+</div>
