#19 - Added some aesthetic changes to the purchase-create-component.

--- a/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
+++ b/src/app/views/processes/purchase-order/components/purchase-order-create/purchase-order-create.component.html
@@ -5,7 +5,14 @@
   <tabset>
 
     <tab>
-      <ng-template tabHeading><i class="icon-people"></i> Seleccionar proveedor &nbsp;<span class="badge badge-pill badge-warning">!</span></ng-template>
+      <ng-template tabHeading>
+        <i class="icon-people"></i> 
+        Seleccionar proveedor &nbsp;
+        <span 
+          *ngIf="!selectedProviderRequisitionDetails.length" 
+          class="badge badge-pill badge-warning">!
+        </span>
+      </ng-template>
       
       <div *ngIf="providers && requisitions" class="animated fadeIn">
         <div class="row">
@@ -26,8 +33,27 @@
     </tab>
 
     <tab>
-      <ng-template tabHeading><i class="icon-people"></i> Seleccionar proveedor &nbsp;<span class="badge badge-pill badge-warning">!</span></ng-template>
+      <ng-template tabHeading><i class="icon-list"></i> Tabla de productos y servicios a ordenar &nbsp;<span class="badge badge-pill badge-warning">!</span></ng-template>
       
+      <div *ngIf="selectedProviderRequisitionDetails" class="animated fadeIn">
+          <!-- <ngx-datatable #myTable class="material" 
+          [rows]="rows" 
+          [columnMode]="'force'" 
+          [columns]="columns" 
+          [headerHeight]="50" 
+          [footerHeight]="50"  
+          [rowHeight]="'auto'" 
+          [limit]="5" 
+          [selected]="selected" 
+          [selectionType]="selectionType" (select)='onSelect($event)'>
+          </ngx-datatable> -->
+      </div>
+
+        <div *ngIf="!selectedProviderRequisitionDetails.length" class="card card-accent-danger">
+          <div class="card-body">
+            <div>Selecciona un proveedor en la pestaña anterior para poder continuar :)</div>
+          </div>
+        </div>
       
     </tab>
     <tab>
